# R

./: .gitignore  CHANGELOG.md  README.md  config.example.yaml  config.yaml  investment_params.yaml  pyproject.toml  requirements.txt  start_server.py  test_health.py
.codebuddy/: MEMORY.md
.codebuddy/memory/: 2026-03-09.md  2026-03-10.md  2026-03-11.md
backend/: index_book_pilot.py  reindex_books.py  requirements.txt  run_self_improve.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/book_samples/: Expectations_Investing_Reading_Stock_Prices_for_Better_Returns_(Rappaport_Alfred.txt  Investment_Valuation,_University_Edition_Tools_and_Techniques_for_Determining_th.txt  Quality_Investing_Owning_the_best_companies_for_the_long_term_(Lawrence_A_Cunnin.txt  Quantitative_Value_A_Practitioners_Guide_to_Automating_Intelligent_Investment_an.txt  The_Education_of_a_Value_Investor_My_Transformative_Quest_for_Wealth,_Wisdom,_an.txt  The_Essays_of_Warren_Buffett_Lessons_for_Corporate_America,_Third_Edition_(Warre.txt  The_Five_Rules_for_Successful_Stock_Investing_Morningstars_Guide_to_Building_Wea.txt  The_Intelligent_Investor_The_Definitive_Book_on_Value_Investing._A_Book_of_Pract.txt  The_Little_Book_That_Still_Beats_the_Market_(Greenblatt,_Joel)_(z-library.sk,_1l.txt  (+5 more)
blogs/: 2026-03-02.md  2026-03-03.md  2026-03-05.md
docs/: thresholds_reference.md
src/: analyzer.py  cli.py  config.py  distilled_rules_bridge.py  models.py  processor.py  screening_pipeline.py  search.py  stock_engine.py  symbol_resolver.py  web_app.py
web/: index.html
(+343 files in other folders)
